--- a/views/login.ejs
+++ b/views/login.ejs
@@ -67,7 +67,7 @@
                     <label class="card__tab-label" for="tab-2">Đăng ký</label>
                     <div class="card__tab-inner">
                         <div class="card__form">
-                            <form action="/signup" method="get" id="formSignUp">
+                            <form action="/signup" method="post" id="formSignUp">
                                 <div class="card__input-group">
                                     <input class="card__input-group-input" type="text" required="required" name="customerName"  id="txtCustomername" onblur="checkCustomerName(this.value)"/>
                                     <label class="card__input-group-label">Họ và tên</label>
